--- a/part-3/styles.css
+++ b/part-3/styles.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  border-bottom: 1px solid black;
+  border-bottom: 2px solid black;
 }
 
 button {
@@ -17,7 +17,7 @@ button {
   display: table-row;
   flex: 0 1 100%;
   align-items: center;
-  border: 1px solid black;
+  border-bottom: 2px solid black;
   padding: 1%;
 }
 
@@ -30,14 +30,14 @@ button {
 .sidebar {
   display: flex;
   flex-flow: column wrap;
-  border: 1px solid black;
+  border-right: 2px solid black;
   flex: 1 0 19%;
   width: 20%;
 }
 
 .sidebar-header {
   background-color: gray;
-  border-bottom: 1px solid black;
+  border-bottom: 2px solid black;
 }
 
 .sidebar-menu {
